# cectap

./: .gitignore  LICENSE  README.md  pyproject.toml
cectap/: __init__.py  helpers.py  parsing.py
examples/: cectap.service  cectap_example.py
libcec_patch/: archlinux-libcec-pkgbuild.patch  ceclog.patch
